更新依赖,  去除非项目依赖

--- a/package.json
+++ b/package.json
@@ -19,8 +19,5 @@
     "url": "https://github.com/LoveofRedMoon/LeetCode-Class/issues"
   },
   "homepage": "https://github.com/LoveofRedMoon/LeetCode-Class#readme",
-  "dependencies": {
-    "global": "^4.3.2",
-    "npm": "^6.4.1"
-  }
+  "dependencies": {}
 }
