--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leetcode-class",
   "version": "1.2.1",
-  "description": "主要是JavaScript在LeetCode上面的 ListNode 与 TreeNode, 方便各位调试",
+  "description": "JavaScript Tools For LeetCode",
   "main": "index.js",
   "directories": {
     "example": "example"
@@ -18,6 +18,11 @@
   "bugs": {
     "url": "https://github.com/LoveofRedMoon/LeetCode-Class/issues"
   },
+  "keywords": [
+    "leetcode",
+    "javascript",
+    "constructor"
+  ],
   "homepage": "https://github.com/LoveofRedMoon/LeetCode-Class#readme",
   "dependencies": {}
 }
